--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -11,7 +11,7 @@
 
 #sign-in-content {
     padding: 40px 30px;
-    height: 500px;
+    min-height: 500px;
     max-width: 400px;
     background-color: white;
     border-radius: 5px;
