add reset password

--- a/src/components/passwordReset.css
+++ b/src/components/passwordReset.css
@@ -1,4 +1,4 @@
-#sign-in {
+#password-reset {
     height: 100%;
     background: url("../assets/wallpaper.jpg");
     min-height: 100vh;
@@ -9,7 +9,7 @@
     align-items: center;
 }
 
-#sign-in-content {
+#password-reset-content {
     padding: 30px;
     min-height: 500px;
     max-width: 400px;
@@ -21,49 +21,19 @@
     align-items: center;
 }
 
-#sign-in-content h1 {
-    margin: 10px 0 5px 0;
-    text-align: center;
-}
-
-#sign-in-content h3 {
-    margin: 0 0 10px 0;
-    text-align: center;
-}
-
-#sign-in-content p {
-    margin: 10px 0;
-    text-align: center;
-}
-
-#form-part {
-    margin-top: 30px;
-    width: 90%;
-}
-
-#sign-in .MuiFormControl-root {
+#password-reset .MuiFormControl-root {
     width: 100%;
-    margin-top: 30px;
     position: relative;
 }
 
-#sign-in .MuiFormHelperText-root {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -35px;
-}
-
-#sign-in .MuiButtonBase-root {
+#password-reset .MuiButtonBase-root {
     background: linear-gradient(to right, #FFD17C, #E7647E);
     font-weight: bold;
 }
 
-#no-account {
-    margin-top: 70px;
-}
-
-#no-account p {
-    font-size: 15px;
-    line-height: 1.4;
+#password-reset .MuiFormHelperText-root {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -20px;
 }
