--- a/src/components/signUp.css
+++ b/src/components/signUp.css
@@ -14,7 +14,7 @@
     height: 500px;
     max-width: 400px;
     background-color: white;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     /* box-shadow: 0 0 10px lightgray; */
     display: flex;
     flex-direction: column;
