--- a/src/components/passwordReset.css
+++ b/src/components/passwordReset.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 #password-reset .MuiFormControl-root {
@@ -37,3 +38,15 @@
     right: 0;
     bottom: -20px;
 }
+
+#back {
+    position: absolute;
+    left: 30px;
+    right: 30px;
+    bottom: 30px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
