add loading ref to login screen

--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 #sign-in-content h1 {
@@ -66,4 +67,18 @@
 #no-account p {
     font-size: 15px;
     line-height: 1.4;
+}
+
+#loading-div {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
